changed the content

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <div class="content row">
             <div class="top-content row">
-                <div class="col">
-                    <h3 id="testcontent">
+                <div class="col" id="testcontent">
+                    <h3 >
                         Data science is a "concept to unify statistics, data analysis, machine learning, domain knowledge and their related methods" in order to "understand and analyze actual phenomena" with data.[3] It uses techniques and theories drawn from many fields within the context of mathematics, statistics, computer science, domain knowledge and information science. Turing award winner Jim Gray imagined data science as a "fourth paradigm" of science (empirical, theoretical, computational and now data-driven) and asserted that "everything about science is changing because of the impact of information technology" and the data deluge</h3>
                    
                 </div>
@@ -73,10 +73,5 @@
         </div>
     </div>
 </body>
-<script>
-    function changeContent() {
-        document.getElementById("testcontent").innerHTML = "Merhaba JavaScript";
-
-    }
-</script> 
+<script src="startjs.js"></script>
 </html>
