--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
                     A computer programmer,sometimes called a software developer, a programmer or more recently a coder (especially in more informal contexts), is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers, or to a generalist who writes code for many kinds of software.</p>
             </div>
         </div>
+      
         <div class="menu row mx-auto col-lg-6 col-sm-12">
             <ul>
-                <li><a href="#" style="cursor: pointer;" onclick="changeHome()">Home</a></li>
-                <li><a href="#" style="cursor: pointer;" onclick="changeAboutus()">About Us</a></li>
-                <li><a href="#" style="cursor: pointer;" onclick="changeContent()">Content</a></li>
+                <li><a href="#" style="cursor: pointer;" onclick="changeContent('home'    ,  'testcontent' )">Home</a></li>
+                <li><a href="#" style="cursor: pointer;" onclick="changeContent('about'   ,  'testcontent' )">About Us</a></li>
+                <li><a href="#" style="cursor: pointer;" onclick="changeContent('contact' ,  'testcontent' )">Contact</a></li>
             </ul>
             <div class="clean"></div>
  
@@ -39,8 +40,6 @@
         <div class="content row">
             <div class="top-content row">
                 <div class="col" id="testcontent">
-                    <h3 >
-                        Data science is a "concept to unify statistics, data analysis, machine learning, domain knowledge and their related methods" in order to "understand and analyze actual phenomena" with data.[3] It uses techniques and theories drawn from many fields within the context of mathematics, statistics, computer science, domain knowledge and information science. Turing award winner Jim Gray imagined data science as a "fourth paradigm" of science (empirical, theoretical, computational and now data-driven) and asserted that "everything about science is changing because of the impact of information technology" and the data deluge</h3>
                    
                 </div>
             </div>  
@@ -48,7 +47,7 @@
                 <div class="middle-content-pic col-lg-3 col-sm-12">
                     <img width="100%" src="https://svitla.com/uploads_converted/0/2135-database_management_software.webp?1560161553" height="230">
                 </div>
-                <div class="middle-content-text col-lg-9 col-sm-12">                  
+                <div class="middle-content-text col-lg-9 col-sm-12" id="testcontent">                  
                     <p >A database is an organized collection of data, generally stored and accessed electronically from a computer system. Where databases are more complex they are often developed using formal design and modeling techniques. The database management system (DBMS) is the software that interacts with end users, applications, and the database itself to capture and analyze the data. The DBMS software additionally encompasses the core facilities provided to administer the database. The sum total of the database, the DBMS and the associated applications can be referred to as a "database system". Often the term "database" is also used to loosely refer to any of the DBMS, the database system or an application associated with the database.</p>
                 </div>
             </div>
